config/overlay/multi-cluster/virtual-garden/webhook-admission/admission_configurations_url_patch.yaml
# SPDX-FileCopyrightText: 2021 SAP SE or an SAP affiliate company and Gardener contributors
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
  - clientConfig:
      url: https://$(SERVICE_NAME).$(SERVICE_NAMESPACE).svc/validate-configmap
    name: validating-create-update-garden-login.gardener.cloud
